Added rounded false on cards

--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -19,6 +19,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/Christie_grunnleggerBy1871.jpg" 
     imageAlt="Portrett av Christie" 
     href="/menneskene/wfk-christie"
+    rounded={false}
   />
    <Card 
     title="Jacob Neumann (1772-1848)"
@@ -26,6 +27,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/By7851_Neumann_red.jpg" 
     imageAlt="Portrett av Neumann" 
     href="https://nbl.snl.no/Jacob_Neumann"
+    rounded={false}
   />
    <Card 
     title="August Konow (1780-1873)"
@@ -33,6 +35,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av August Konow" 
     href="https://nbl.snl.no/August_Konow"
+    rounded={false}
   />
   <Card
     title="Andres Lorange (1847-1888)"
@@ -40,6 +43,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/AndersLorange_red.jpg" 
     imageAlt="Portrett av Andres Lorange" 
     href="https://www.unimus.no/arkeologi/lorange/#0"
+    rounded={false}
   />
   <Card
     title="Olaf Hanssen"
@@ -47,6 +51,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/bt-23-10-1933-olaf-hanssen-icon.jpg" 
     imageAlt="Portrett av Olaf Hanssen" 
     href="/menneskene/olaf-hanssen"
+    rounded={false}
   />
   <Card 
     title="Magdalene Abel (1869-)"
@@ -54,6 +59,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Magdalene Abel" 
     href="/"
+    rounded={false}
   />
   <Card 
     title="Haakon Shetelig (1877-1955)"
@@ -61,6 +67,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/HaakonShetelig_red.jpg" 
     imageAlt="Portrett av Haakon Shetelig" 
     href="https://snl.no/Haakon_Shetelig"
+    rounded={false}
   />
   <Card 
     title="Johannes Bøe (1891-1971)"
@@ -68,6 +75,7 @@ import {Cards, Card} from '@/components/card'
     image="/images/menneskene/Johs_Bøe_red.jpg" 
     imageAlt="Portrett av Johs. Bøe" 
     href="https://snl.no/Johannes_B%C3%B8e"
+    rounded={false}
   />
   <Card 
     title="Eva Fett"
@@ -75,6 +83,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Eva Fett" 
     href="https://marcus.uib.no"
+    rounded={false}
   />
   <Card 
     title="Per Fett"
@@ -82,6 +91,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Per Fett" 
     href="https://marcus.uib.no"
+    rounded={false}
   />
   <Card 
     title="Christie"
@@ -89,6 +99,7 @@ import {Cards, Card} from '@/components/card'
     image="/nav-card-images/vintage-fish-illustration.jpg" 
     imageAlt="Portrett av Chrisite" 
     href="https://marcus.uib.no"
+    rounded={false}
   />
 </Cards>
 
