--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,3 +1,7 @@
+---
+title: 
+---
+
 import { MainHero } from '@/components/main-hero'
 import { NavCards } from '@/components/nav-cards'
 import { Carousel } from '@/components/carousel'
