--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -17,7 +17,7 @@ import { JumpToStories } from '@/components/jump-to-stories'
   <HeroImage src="/verden-i-bergen-hero-ill.png" alt="Verden i Bergen" className="border-um-utland-solid" />
   <HeroContent>
     <HeroTitle>
-      Verden i Bergen
+      Det store utland
     </HeroTitle>
   </HeroContent>
 </Hero>
