--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -17,7 +17,7 @@ import { JumpToStories } from '@/components/jump-to-stories'
   <HeroImage src="/verden-i-bergen-hero-ill.png" alt="Verden i Bergen" className="border-um-utland-solid" />
   <HeroContent>
     <HeroTitle>
-      Det store utland
+      Verden i Bergen
     </HeroTitle>
   </HeroContent>
 </Hero>
@@ -82,7 +82,7 @@ hvor de ble kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har
   <Card 
     title="Samisk samling" 
     description="I denne nettutstillingen kan du lære mer om Universitetsmuseet i Bergen sin samling av samisk kulturarv. 
-    Hva finnes i samlingen, hvordan skal museet etisk forvalte denne kulturarven?" (Kofte (E8289). Foto: Universitetsmuseet i Bergen)
+    Hva finnes i samlingen, hvordan skal museet etisk forvalte denne kulturarven? (Kofte (E8289). Foto: Universitetsmuseet i Bergen)"
     image="/images/verden-i-bergen/E8289_kofte.jpg" 
     imageAlt="Samisk kofte i blått med gule, røde og grønne bånd, rundt halsen, ermene" 
     href="https://samisksamling.w.uib.no/" 
@@ -96,7 +96,7 @@ hvor de ble kjøpt og hvor mye det kostet. Både protokollen og gjenstandene har
   />
    <Card 
     title="Wayang - dukketeater fra Java" 
-    description="Les mer om samlingen med dukker til Wayang kulit og Wayang golek dukketeater. (Foto: Stine Dornfest, Universitetsmuseet i Bergen) " 
+    description="Les mer om samlingen med dukker til Wayang kulit og Wayang golek dukketeater. (Foto: Stine Dornfest, Universitetsmuseet i Bergen)" 
     image="/images/verden-i-bergen/E9292_Java.jpg" 
     imageAlt="En dukke. Laget flat med pinne til bruk i dukketeater. Figuren står på en brun båt og er en slags blanding, med blå fuglekropp og monsteraktig ansikt." 
     href="https://tohundrefortellinger.w.uib.no/1970/09/18/1970-wayang-dukketeater-fra-java/" 
