legg-til-tekst-foto-samlinger

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -31,16 +31,16 @@ import { Button } from '@/components/ui/button'
 
 <Carousel title="Samlingenes plass" className="full">
   <Carousel.Item 
-    title="En institusjon blir til" 
+    title="Museets første protokoll" 
     href="https://tohundrefortellinger.w.uib.no/1825/09/26/1825-museets-forste-protokoll/" 
     image="/images/en-institusjon-blir-til/Bf_Bergen_Museum_Forhandlingsprotokoll_1825-1827_002.jpg" 
     imageAlt="Håndskrevet protokoll. Inneholder museets første møter" 
   />
   <Carousel.Item 
-    title="Samlingene og tilvekst" 
-    href="/en-institusjon-blir-til" 
-    image="/images/en-institusjon-blir-til.jpg" 
-    imageAlt="En institusjon blir til" 
+    title="Dyr på flyttefot" 
+    href="https://tohundrefortellinger.w.uib.no/2014/09/14/2013-dyr-pa-luftetur-utflytting-fra-naturhistorisk/" 
+    image="/images/en-institusjon-blir-til/Flytting_13_02_2019_002.jpg" 
+    imageAlt="Foto av et langt dyr, trolig slange flyttes av 7 mennesker, utenfor museumsbygningen" 
   />
   <Carousel.Item 
     title="En institusjon blir til" 
