Add description of Lavdatabasen

--- a/content/ressurser.mdx
+++ b/content/ressurser.mdx
@@ -185,7 +185,7 @@ i Europa."
     />
     <ResourceGrid.Item
       title="Lavdatabasen"
-      description="..."
+      description="Lavdatabasen innholder for det meste lav fra Norge, men der er også store, viktige innsamlinger av lav fra Nord-Amerika (T. Tønsberg), Bouvetøya og Antarktis (T. Engelskjøn)."
       image={
         <div className="text-3xl font-bold font-sans content-center items-center text-center h-full">
           Lavdatabasen
