legg-til-card-teks-foto-samlinger

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -43,10 +43,10 @@ import { Button } from '@/components/ui/button'
     imageAlt="Foto av et langt dyr, trolig slange flyttes av 7 mennesker, utenfor museumsbygningen" 
   />
   <Carousel.Item 
-    title="En institusjon blir til" 
-    href="/en-institusjon-blir-til" 
-    image="/images/en-institusjon-blir-til.jpg" 
-    imageAlt="En institusjon blir til" 
+    title="Historisk museum åpner i 1927" 
+    href="/https://tohundrefortellinger.w.uib.no/1927/09/21/1927-nytt-museumsbygg-historisk-museum/" 
+    image="/images/en-institusjon-blir-til/ubb-so-0738_museum.jpg" 
+    imageAlt="Svart hvitt foto av historisk museum med byen og fjellet løvstakken i bakgrunnen" 
   />
   <Carousel.Item 
     title="En institusjon blir til" 
