fiks-samlinger-flyttefot

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -37,8 +37,8 @@ import { Button } from '@/components/ui/button'
     imageAlt="Håndskrevet protokoll. Inneholder museets første møter" 
   />
   <Carousel.Item 
-    title="Dyr på flyttefot" 
-    href="https://tohundrefortellinger.w.uib.no/2014/09/14/2013-dyr-pa-luftetur-utflytting-fra-naturhistorisk/" 
+    title="Samlinger på flyttefot" 
+    href="/samlinger-pa-flyttefot.mdx" 
     image="/images/en-institusjon-blir-til/Flytting_13_02_2019_002.jpg" 
     imageAlt="Foto av et langt dyr, trolig slange flyttes av 7 mennesker, utenfor museumsbygningen" 
   />
