Update Figure component usage across multiple MDX files: change className to size for improved semantic structure and consistency in image rendering.

--- a/content/tema/dyr/bucher-og-blaakvalen.mdx
+++ b/content/tema/dyr/bucher-og-blaakvalen.mdx
@@ -15,7 +15,7 @@ keywords:
 
 Ein av dei vakraste og mest kjende illustrasjonane i samlingane ved Universitetsbiblioteket er den store blåkvalen teikna av Henrich Bucher jr. Kvalen, har fått rett slektsnamn, Baleoenoptera, men artsnamnet «sibbaldii» blei seinare bytta ut med Carl von Linnés opphavlege «musculus». Det var den norske zoologen Georg Ossian Sars som i 1875 laga artsnamnet «sibbaldii».  
 
-<Figure className="feature" image="/images/dyr/ubb-ms-2310.jpg" alt="Blåhval" width={2000} height={1000}>
+<Figure size="feature" image="/images/dyr/ubb-ms-2310.jpg" alt="Blåhval" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Blåhval tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
@@ -41,7 +41,7 @@ Bucher pensjonerte seg i 1924, og  forsvann dermed (og dessverre) også ut av hi
   </Work.Content>
 </Work>
 
-<Figure className="feature" mode="portrait" image="/images/dyr/ubb-ms-1478-2-003.jpg" alt="Sjøstjerne" width={2000} height={1000}>
+<Figure mode="portrait" image="/images/dyr/ubb-ms-1478-2-003.jpg" alt="Sjøstjerne" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Slangestjerner, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
