--- a/content/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk.mdx
+++ b/content/tema/dyr/kaffe-og-elskov-i-blaahvalens-buk.mdx
@@ -16,7 +16,7 @@ keywords:
 
 I oktober 1865 strandet en 16 meter lang og 25 tonn tung blåhval utenfor Gøteborg. Den endte sine dager som verdens hittil eneste utstoppede og innredede blåhval, som ble foreviget i et praktverk av en bok trykket i 50 eksemplarer, med 29 innlimte originalfotografier, en bok som er blant de virkelige sjeldenhetene i Spesialsamlingen.
 
-<Figure className="feature" image="/images/dyr/ubb-spesmag-f-0062-005.jpg" alt="Modell av hval" width={2000} height={1000}>
+<Figure image="/images/dyr/ubb-spesmag-f-0062-005.jpg" alt="Modell av hval" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       August Wilhelm Malms modell av blåhvalen som endte sine dager i skjærgården ved Gøteborg. Fotograf: J.P. Peterson. Universitetsbiblioteket i Bergen.
@@ -25,7 +25,7 @@ I oktober 1865 strandet en 16 meter lang og 25 tonn tung blåhval utenfor Gøteb
 </Figure>
 
 
-<Figure className="feature" image="/images/dyr/ubb-spesmag-f-0062-002.jpg" alt="Hval" width={2000} height={1000}>
+<Figure image="/images/dyr/ubb-spesmag-f-0062-002.jpg" alt="Hval" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Den fremtidige «Malmska valen» fotografert i Gøteborg i november 1865. Foto: J.P. Peterson. Universitetsbiblioteket i Bergen.
@@ -46,7 +46,7 @@ Blåhvalen ble fraktet fra skjærgården inn til Gøteborg med hjelp av dampskip
 
 Kjeven til hvalen ble påmontert jernhengsler, slik at munnen kunne åpnes, og fungerte som inngang til hvalkroppen. Inne i blåhvalens buk ble det så innredet en liten salong med benker, rødt teppe på gulvet, tapetsert med blå tøytapet pyntet med gullstjerner. Mange kilder påstår at salongen i perioder fungerte som kafé, med servering av kaffe og punsj, men dette kan være en av mange vandrehistorier om den «Malmska valen».
 
-<Figure className="feature" mode="portrait" image="/images/dyr/ny-illustrerat-tidning.jpg" alt="Tegning av hvalen med innredet munn" width={2000} height={1000}>
+<Figure mode="portrait" image="/images/dyr/ny-illustrerat-tidning.jpg" alt="Tegning av hvalen med innredet munn" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Den «Malmska valen», slik den ble utstilt i Gøteborg. Illustrasjon fra Ny Illustrerat Tidning 1866.
@@ -56,7 +56,7 @@ Kjeven til hvalen ble påmontert jernhengsler, slik at munnen kunne åpnes, og f
 
 Uansett, blåhvalen sto ferdig rekonstruert i mars 1866 i en nyoppført bygning i Gøteborg, og i mai samme år ble den åpnet for allmenheten, og ble en enorm publikumssuksess. Beruset av suksessen fikk Malm spesiallaget jernbanevogner for å dra på turné med hvalen. Først til ny publikumssuksess i Stockholm, så videre til Hamburg og Berlin. Omkostningene med Tysklandsreisen var enorme, og berlinerne var ikke særlig interessert i en etter hvert litt medtatt og turnésliten blåhval, så hele prosjektet til Malm gikk dundrende konkurs. Svenske sponsorer reddet hvalen hjem til Gøteborg, der den senere ble en av hovedattraksjonene i det nye naturhistoriske museet, åpnet i 1923, plassert i en spesialbygget sal der publikum kunne vandre inn i hvalgapet. Men blåhvalens buk ble etter hvert et attraktivt og spektakulært tilholdssted for elskovssyke par, og hvalgapet ble senere permanent stengt for fremtidige amorøse hvalfetisjister. Den «Malmska valen» kan fremdeles sees på det naturhistoriske museet i Gøteborg.
 
-<Figure className="feature" mode="portrait" image="/images/dyr/ubb-romertall-box-ii-m-1-malm-01.jpg" alt="Forside av et hefte med bilde av hval" width={2000} height={1000}>
+<Figure mode="portrait" image="/images/dyr/ubb-romertall-box-ii-m-1-malm-01.jpg" alt="Forside av et hefte med bilde av hval" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Populærversjonen av beretningen om den «Malmska valen», publisert 1866. Universitetsbiblioteket i Bergen.
@@ -69,7 +69,7 @@ Boka inneholder 133 tekstsider, og 29 originale innlimte albuminfotografier. Fot
 
 Etter konkursen med blåhvalen hadde tydeligvis Malm fått nok av naturens største skapninger, og gikk - trolig med lettelse og et snev av selvironi – over til å forske på meitemark.
 
-<Figure className="feature" mode="portrait" image="/images/dyr/wikicommons-august-malm.jpg" alt="Portrett av August Malm" width={2000} height={1000}>
+<Figure mode="portrait" image="/images/dyr/wikicommons-august-malm.jpg" alt="Portrett av August Malm" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Portrett av August Wilhelm Malm. Ukjent fotograf. Wikimedia commons.
