--- a/content/tema/stein/geologiske-undervisningsplansjer.mdx
+++ b/content/tema/stein/geologiske-undervisningsplansjer.mdx
@@ -14,7 +14,7 @@ keywords:
 
 På Mineralogisk-geologisk avdeling på Bergens Museum var store undervisningsplansjer et av de viktigste hjelpemidlene til bruk i undervisning og til formidling i utstillinger. Flesteparten av de 750 fargerike plansjene som er bevart ved Universitetsbiblioteket ble håndtegnet ved museet, i stor grad av kvinnelige illustratører som bl.a. Ellen Irgens.  
 
-<Figure mode="portrait" image="/images/stein/ubb-ms-2267-v-c-008.jpg" alt="" width={2000} height={1000}>
+<Figure size="feature" image="/images/stein/ubb-ms-2267-v-c-008.jpg" alt="" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       «Intrusion av granit i gneis». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.
