--- a/content/tema/vann-vaer-og-vind/breforskning.mdx
+++ b/content/tema/vann-vaer-og-vind/breforskning.mdx
@@ -47,7 +47,7 @@ Brearmen på Nigardsbreen, der mannen med dress poserte for fotograf Knud Knudse
   </Work.Content>
 </Work>
 
-<Figure className="feature" image="/images/vann-vaer-og-vind/ubb-ms-2196-b-09-041.jpg" alt="Isbre" width={2000} height={1000}>
+<Figure image="/images/vann-vaer-og-vind/ubb-ms-2196-b-09-041.jpg" alt="Isbre" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Nigardsbreen, 1947. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.
