--- a/content/tema/vann-vaer-og-vind/nordhavsekspedisjonen.mdx
+++ b/content/tema/vann-vaer-og-vind/nordhavsekspedisjonen.mdx
@@ -35,7 +35,7 @@ Den Norske Nordhavs-Expedition 1876-1878 var den første nasjonale satsingen på
 Målene for ekspedisjonen var ambisiøse: undersøke havets dybde, temperatur, og kjemiske sammensetning, strømninger, havbunnens geologiske formasjoner, værforhold og klima, dyphavets dyre- og planteverden. Prøver ble tatt på 375 målestasjoner, og funnene fra ekspedisjonen ble svært omfattende og banebrytende, særlig gjennom Mohns beskrivelser og utregninger av havstrømmer og temperaturnivåer, og gjennom oppdagelsene av 300 nye dyrearter fra dyphavet. 
 Fem av Danielssens feltbøker fra ekspedisjonen er bevart, det samme er de uinnbundne feltnotatene til zoologen og forretningsmannen Herman Friele (1838-1921). Danielssens feltbøker er blottet for personlige kommentarer eller skildringer fra ekspedisjonen, innførslene fokuserer utelukkende på de ulike dyreartene som fulgte med trålen og skrapen opp fra havdypet på de ulike målestasjonene. Sjøanemoner og koralldyr måles og beskrives detaljert og nøkternt, og feltbøkene har, sammen med de bevarte funnene, fungert som primærkilder for de syv avhandlingene Danielssen i ettertid skrev og publiserte i syvbindsverket fra Nordhavsekspedisjonen.
 
-<Figure className="feature" image="/images/vann-vaer-og-vind/ubb-ms-0677-d-05-044.jpg" alt="Tegning av vulkan i feltbok" width={2000} height={1000}>
+<Figure size="feature" image="/images/vann-vaer-og-vind/ubb-ms-0677-d-05-044.jpg" alt="Tegning av vulkan i feltbok" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Skisse av Jan Mayen, fra dagbok av Herman Friele, 1877. Universitetsbiblioteket i Bergen.
@@ -64,7 +64,7 @@ Avhandlingen om Actinida (sjøanemoner) er praktfullt illustrert med fargelitogr
 
 Skildringene av stormer og sjøsyke er hentet fra Frieles håndskrevne notater fra ekspedisjonen, en salig blanding av reisedagbok, feltnotater og anekdoter som lar oss følge både det vitenskapelige arbeidet og livet om bord på «Vøringen», med de faste «grogg»-kveldene akkompagnert av Mohns fiolin, Danielssens sjøsyke, og bl.a.  feiringen av Danielssens bursdag utenfor Bjørnøya 4. juli 1878.
 
-<Figure image="/images/vann-vaer-og-vind/ubb-ms-0825-e.jpg" alt="Menykort" width={2000} height={1000}>
+<Figure mode="portrait" image="/images/vann-vaer-og-vind/ubb-ms-0825-e.jpg" alt="Menykort" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Menykort fra Nordhavsekspedisjonen, 16. juni 1878. Universitetsbiblioteket i Bergen.
