--- a/content/tema/vann-vaer-og-vind/vann-is-bilder.mdx
+++ b/content/tema/vann-vaer-og-vind/vann-is-bilder.mdx
@@ -33,7 +33,7 @@ keywords:
   </Work.Content>
 </Work>
 
-<Figure className="feature" image="/images/vann-vaer-og-vind/ubb-ms-2093-u-2-028.jpg" alt="Foto av isbre" width={2000} height={1000}>
+<Figure image="/images/vann-vaer-og-vind/ubb-ms-2093-u-2-028.jpg" alt="Foto av isbre" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       «Nigardsbræ, Jostedalen. 1931». Fotograf: John B. Rekstad. Universitetsbiblioteket i Bergen.
@@ -52,7 +52,7 @@ keywords:
   </Work.Content>
 </Work>
 
-<Figure className="feature" image="/images/vann-vaer-og-vind/ubb-romertall-foliant-x-exp-2-001.jpg" alt="Trykk i bok av Jan Mayen" width={2000} height={1000}>
+<Figure image="/images/vann-vaer-og-vind/ubb-romertall-foliant-x-exp-2-001.jpg" alt="Trykk i bok av Jan Mayen" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Litografi fra Jan Mayen, laget av F.W. Schiertz. Fra Den Norske Nordhavs-Expedition 1876-1878, bind 1, 1882. Universitetsbiblioteket i Bergen.
