--- a/content/tema/dyr/james-grieg.mdx
+++ b/content/tema/dyr/james-grieg.mdx
@@ -14,7 +14,7 @@ keywords:
 
 Mannen med det staselige navnet og det intense blikket, James Alexanderssøn Grieg (1861-1936), jobbet som konservator på Bergens Museum i 46 år, men er på ymse vis fremdeles en mytisk tilstedeværende figur her på Nygårdshøyden, ikke minst som en til tider høylytt åndelig vokter av Spesialsamlingens magasiner.
 
-<Figure className="feature" image="/images/dyr/ubb-bs-fol-01796.jpg" alt="Portrett av James Grieg" width={2000} height={1000}>
+<Figure image="/images/dyr/ubb-bs-fol-01796.jpg" alt="Portrett av James Grieg" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Portrett av James Grieg. Utsnitt. Fotograf: Atelier KK. Universitetsbiblioteket i Bergen.
@@ -39,7 +39,7 @@ Historien om skjelettet til James er nok en sannhet med solide modifikasjoner. R
 
 Midt i denne uklassifiserte floraen av myter og vandrehistorier er det lett å glemme at James var en dyktig forsker og populær formidler. Han startet å jobbe på museet sammen med Fridtjof Nansen og D.C. Danielssen i 1885, og gjennom 46 år som konservator hadde han ansvaret for samlingene av både virveldyr og de virvelløse dyrene. Han holdt en mengde populærvitenskapelige foredrag, der han overveldet tilhørerne med sin intense bruk av latinske navn og begrep; han publiserte over 100 artikler i tidsskriftet «Naturen», i tillegg til mer enn 75 vitenskapelige artikler i museets årbøker og i andre publikasjoner. Den faglige spennvidden hans var enorm, men han hadde en særlig forkjærlighet for hvaler, og samarbeidet tett med museets eminente tegner, Henrich Bucher jr., om illustrasjoner til alle artiklene og arbeidene sine.
 
-<Figure className="feature" mode="portrait" image="/images/dyr/ubb-romertall-box-xxx-gri-01.jpg" alt="Menykort" width={2000} height={1000}>
+<Figure mode="portrait" image="/images/dyr/ubb-romertall-box-xxx-gri-01.jpg" alt="Menykort" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       «Spiseseddel ved festen hos dr. Schetelig, 3.1.1911 i anledning av konservator J.A. Griegs jubilæum». Universitetsbiblioteket i Bergen.
@@ -49,7 +49,7 @@ Midt i denne uklassifiserte floraen av myter og vandrehistorier er det lett å g
 
 James var tydeligvis svært populær blant kollegaene sine ved museet, bl.a. ble 50-årsdagen og 25-års jubileet som ansatt feiret med en middag med spesiallaget spiseseddel. Og til 70-årsdagen i 1931 ble det produsert et eget festskrift til James, en svært så uhøytidelig og tidstypisk spesialutgave av tidsskriftet «Naturen». James er på sett og vis fortsatt populær her ved Spesialsamlingen, det er lett å skylde på ham hvis ting ikke fungerer, eller når smått overtroiske ansatte opplever uforklarlige bevegelser og lyder nede i dypet i kjellermagasinene våre.
 
-<Figure className="feature" mode="portrait" image="/images/dyr/naturen-festskrift.jpg" alt="Festskrift av Naturen" width={2000} height={1000}>
+<Figure mode="portrait" image="/images/dyr/naturen-festskrift.jpg" alt="Festskrift av Naturen" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Spesialutgave av tidsskriftet «Naturen», desember 1931. Uhøytidelig festskrift til James Griegs 70-årsdag. Universitetsbiblioteket i Bergen.
