--- a/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
+++ b/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
@@ -16,7 +16,7 @@ keywords:
 
 I regnvåte sommermåneder i 1877 og 1878 reiste cand. real. Thomas Christian Thomassen på feltarbeid inn i landskapet og folkedypet i Hardanger. Med finslipt fyllepenn geologiserte han både bergarter og befolkning, sirlig og lett infamt nedtegnet i skinninnbundne feltdagbøker med messingspenner.
 
-<Figure className="feature" image="/images/stein/ubb-ms-2093-i-03-0101.jpg" alt="" width={2000} height={1000}>
+<Figure image="/images/stein/ubb-ms-2093-i-03-0101.jpg" alt="" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
 Illustrasjon fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Illustrasjon fra Ljono i Ulvik, 3. juli 1877. Universitetsbiblioteket i Bergen.
@@ -72,7 +72,7 @@ På grunn av svært dårlig vær («Storm og Regn. Dette behøver jeg snart ikke
 
 «Paa Samland var der meget trist. Folket er tungt og trægt, superreligiøst (..) Jeg overvar Slutningen af en Husandagt. Han. Ole, var Forsanger og i en ynkelig skrigende og snøvlende Tone skreg han. Dette var nu saa, men under sangen saa han paa skraa hen paa mig gjentagne Gange. Dette sjælende Blik havde noget infamt ræveagtigt ved sig, at det paa mig gjorde et ganske forfærdeligt Indtryk».
 
-<Figure className="feature" image="/images/stein/ubb-ms-2093-i-3-0027.jpg" alt="" width={2000} height={1000}>
+<Figure image="/images/stein/ubb-ms-2093-i-3-0027.jpg" alt="" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», side 23, av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.
@@ -80,7 +80,7 @@ På grunn av svært dårlig vær («Storm og Regn. Dette behøver jeg snart ikke
   </Figure.Content>
 </Figure>
 
-<Figure className="feature" image="/images/stein/ubb-ms-2093-i-3-0131.jpg" alt="" width={2000} height={1000}>
+<Figure image="/images/stein/ubb-ms-2093-i-3-0131.jpg" alt="" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», side 127, av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.
@@ -91,7 +91,7 @@ På grunn av svært dårlig vær («Storm og Regn. Dette behøver jeg snart ikke
 Og når i tillegg maten «var den usleste jeg har kjendt» var lidelseshistorien komplett.
 
 
-<Figure className="feature" image="/images/stein/ubm-bf-diby-000463.jpg" alt="" width={2000} height={1000}>
+<Figure size="feature" image="/images/stein/ubm-bf-diby-000463.jpg" alt="" width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Catharine Hermine Kølle: «Samland i Hardanger». Fotograf: Svein Skare. Universitetsmuseet i Bergen.
