--- a/content/tema/tid-og-rom/almanakk.mdx
+++ b/content/tema/tid-og-rom/almanakk.mdx
@@ -29,7 +29,7 @@ Almanakken av 1783 skrevet for Københavns polhøyde avslutter med disse ordene:
 
 
 {/*
-<Figure className="feature" image="/images/fisk/ubb-ms-0311-a-002.jpg" alt="Tegning av ålekvabbe omgitt av håndskrevet tekst. " width={2000} height={1000}>
+<Figure image="/images/fisk/ubb-ms-0311-a-002.jpg" alt="Tegning av ålekvabbe omgitt av håndskrevet tekst. " width={2000} height={1000}>
   <Figure.Content>
     <Figure.Description>
       Ålekvabbe, tegnet av Peter Stuwitz. Universitetsbiblioteket i Bergen.
@@ -40,7 +40,7 @@ Almanakken av 1783 skrevet for Københavns polhøyde avslutter med disse ordene:
 
 
 {/*
-<Work iiifContent="https://api.ub.uib.no/items/ubb-ms-0380?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-ms-0380?as=iiif">
   <Work.Content>
     <Work.Description>
       Ms 380 Navigasjonsbok. Formler og vakre tegninger. Universitetsbiblioteket i Bergen.
