Refactor Hero component across multiple MDX files to replace HeroImage with HeroAnimation, enhancing visual presentation with Lottie animations for various themes.

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -7,13 +7,12 @@ keywords:
 asIndexPage: true
 ---
 
-import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
-import { ImageCarousel } from '@/components/image-carousel'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="arkeologi" className="bg-um-arkeologi-tint">
-  <HeroImage src="/arkeologi-hero-ill.png" alt="Arkeologi" className="border-um-arkeologi-solid" />
+  <HeroAnimation animation="arkeologi" className="border-um-arkeologi-solid" />
   <HeroContent>
     <HeroTitle>
       Arkeologi
