--- a/content/tema/fisk/index.mdx
+++ b/content/tema/fisk/index.mdx
@@ -8,12 +8,12 @@ keywords:
 asIndexPage: true
 ---
 
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="fisk" className="bg-um-fisk-tint/60">
-  <HeroImage src="/fisk-hero-ill.png" alt="Fisk" className="border-um-fisk-solid" />
+  <HeroAnimation animation="fisk" className="border-um-fisk-solid" />
   <HeroContent>
     <HeroTitle>
       Fisk
