--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -7,12 +7,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="glass" className="bg-um-glass-tint/60">
-  <HeroImage src="/images/glass/hero-glass.png" alt="" className="border-um-glass-solid" />
+  <HeroAnimation animation="glass" className="border-um-glass-solid" />
   <HeroContent>
     <HeroTitle>
       Glass
