--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -8,12 +8,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="helse" className="bg-um-helse-tint/60">
-  <HeroImage src="/helse-hero-ill.png" alt="Helse" className="border-um-helse-solid" />
+  <HeroAnimation animation="helse" className="border-um-helse-solid" />
   <HeroContent>
     <HeroTitle>
       Helse
