--- a/content/tema/hverdag/index.mdx
+++ b/content/tema/hverdag/index.mdx
@@ -9,12 +9,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="hverdag" className="bg-um-hverdag-tint/60">
-  <HeroImage src="/hverdag-hero-ill.png" alt="Hverdag" className="border-um-hverdag-solid" />
+  <HeroAnimation animation="hverdag" className="border-um-hverdag-solid" />
   <HeroContent>
     <HeroTitle>
       Hverdag
