--- a/content/tema/stein/index.mdx
+++ b/content/tema/stein/index.mdx
@@ -12,13 +12,13 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 
 <Hero variant="stein" className="bg-um-stein-tint/60">
-  <HeroImage src="/stein-hero-ill.png" alt="Stein" className="border-um-stein-solid" />
+  <HeroAnimation animation="stein" className="border-um-stein-solid" />
   <HeroContent>
     <HeroTitle>
       Stein
