--- a/content/tema/vann-vaer-og-vind/index.mdx
+++ b/content/tema/vann-vaer-og-vind/index.mdx
@@ -11,12 +11,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="vann-vaer-og-vind" className="bg-um-vaer-tint/60">
-  <HeroImage src="/vann-vaer-og-vind-hero-ill.png" alt="Vann, vær og vind" className="border-um-vaer-solid" />
+  <HeroAnimation animation="vann_vaer_og_vind" className="border-um-vaer-solid" />
   <HeroContent>
     <HeroTitle>
       Vann, vær og vind
