--- a/content/tema/vekster/index.mdx
+++ b/content/tema/vekster/index.mdx
@@ -9,12 +9,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="vekster" className="bg-um-vekster-tint/60">
-  <HeroImage src="/vekster-hero-ill.png" alt="Vekster" className="border-um-vekster-solid" />
+  <HeroAnimation animation="vekster" className="border-um-vekster-solid" />
   <HeroContent>
     <HeroTitle>
       Vekster
