--- a/content/tema/bokstaver-og-tegn/index.mdx
+++ b/content/tema/bokstaver-og-tegn/index.mdx
@@ -8,13 +8,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle, HeroDescription } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
-import { ImageCarousel } from '@/components/image-carousel'
 
-<Hero variant="bokstaver-og-tegn" className="bg-um-tegn-tint/60">
-  <HeroImage src="/bokstaver-og-tegn-hero-ill.png" alt="Bokstaver og tegn" className="border-um-tegn-solid" />
+<Hero variant="bokstaver-og-tegn" className="bg-um-tegn-tint">
+  <HeroAnimation animation="bokstaver_og_tegn" className="border-um-tegn-solid" />
   <HeroContent>
     <HeroTitle>
       Bokstaver og tegn
