--- a/content/tema/dyr/index.mdx
+++ b/content/tema/dyr/index.mdx
@@ -8,13 +8,13 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 
 <Hero variant="dyr" className="bg-um-dyr-tint/60">
-  <HeroImage src="/dyr-hero-ill.png" alt="Dyr" className="border-um-dyr-solid" />
+  <HeroAnimation animation="dyr" className="border-um-dyr-solid" />
   <HeroContent>
     <HeroTitle>
       Dyr
