--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -10,12 +10,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="kirkekunst" className="bg-um-kirkekunst-tint/60">
-  <HeroImage src="/kirkekunst-hero-ill.png" alt="Kirkekunst" className="border-um-kirkekunst-solid" />
+  <HeroAnimation animation="kirkekunst" className="border-um-kirkekunst-solid" />
   <HeroContent>
     <HeroTitle>
       Kirkekunst
