--- a/content/tema/tid-og-rom/index.mdx
+++ b/content/tema/tid-og-rom/index.mdx
@@ -10,12 +10,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="tid-og-rom" className="bg-um-tidrom-tint/60">
-  <HeroImage src="/tid-og-rom-hero-ill.png" alt="Tid og rom" className="border-um-tidrom-solid" />
+  <HeroAnimation animation="tid-og-rom" className="border-um-tidrom-solid" />
   <HeroContent>
     <HeroTitle>
       Tid og rom
