--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -9,12 +9,12 @@ asIndexPage: true
 ---
 
 import { ContentGrid } from '@/components/ui/chc/content-grid/content-grid'
-import { Hero, HeroImage, HeroContent, HeroTitle } from '@/components/hero'
+import { Hero, HeroAnimation, HeroContent, HeroTitle } from '@/components/hero'
 import { Card, Cards } from '@/components/card'
 import { JumpToStories } from '@/components/jump-to-stories'
 
 <Hero variant="verden-i-bergen" className="bg-um-utland-tint/60">
-  <HeroImage src="/verden-i-bergen-hero-ill.png" alt="Verden i Bergen" className="border-um-utland-solid" />
+  <HeroAnimation animation="verden-i-bergen" className="border-um-utland-solid" />
   <HeroContent>
     <HeroTitle>
       Verden i Bergen
