--- a/content/index.mdx
+++ b/content/index.mdx
@@ -44,7 +44,7 @@ import { Button } from '@/components/ui/button'
   />
   <Carousel.Item 
     title="Historisk museum åpner i 1927" 
-    href="/https:/tohundrefortellinger.w.uib.no/1927/09/21/1927-nytt-museumsbygg-historisk-museum/" 
+    href="https://tohundrefortellinger.w.uib.no/1927/09/21/1927-nytt-museumsbygg-historisk-museum/" 
     image="/images/en-institusjon-blir-til/ubb-so-0738_museum.jpg" 
     imageAlt="Svart hvitt foto av historisk museum med byen og fjellet løvstakken i bakgrunnen" 
   />
