Update link in Carousel item on index.mdx to correct URL for historical reference.

--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -149,7 +149,7 @@ i vårt museumsdistrikt.
     description="Les Haakon Sheteligs rapport fra 1902. (Spenne (B5764m). Foto: Adnan Icagic, Universitetsmuseet i Bergen) " 
     image="/images/arkeologi/B5764m_Spenne_1902.jpg" 
     imageAlt="En oval spenne i bronse, med ornamentikk" 
-    href="https://urn.digitalarkivet.no/URN:NBN:no-a1450-ed60219225000001.jpg" 
+    href="https://urn.nb.no/URN:NBN:no-nb_digibok_2016011907543" 
     />
   <Card 
     title="Hvem var Andres Lorange?" 
