--- a/content/samlinger-pa-flyttefot.mdx
+++ b/content/samlinger-pa-flyttefot.mdx
@@ -61,7 +61,7 @@ prosjekt sikre samlinger.
   />
    <Card 
     title="Prosjketet FLYTT" 
-    description="Les mer om prosjektet "FLYTT" som er en del av "Sikre Samlinger" " 
+    description="Les mer om prosjektet FLYTT som er en del av prosjektet Sikre Samlinger" " 
     image="/images/en-institusjon-blir-til/X11069_olbolle.jpg" 
     imageAlt="Foto av en ølboll i tre med brun grunnfargen og grønt mønster" 
     href="https://www.uib.no/samlingsforvaltning/149521/flytt-24" 
