--- a/content/samlinger-pa-flyttefot.mdx
+++ b/content/samlinger-pa-flyttefot.mdx
@@ -14,8 +14,9 @@ import { deepStrictEqual } from 'assert'
 
 # Samlinger på flyttefot
 
-Gjennom museets 200 år har samlinger og arkiv blitt flyttet flere ganger. I de seneste årene har særlig to store prosjekter vært viktig, oppussingen av Naturhistorisk museum og 
-prosjekt sikre samlinger.  
+Gjennom museets 200 år har samlinger og arkiv blitt flyttet flere ganger. I de seneste 
+årene har særlig to store prosjekter vært viktig, oppussingen av Naturhistorisk museum 
+og prosjekt sikre samlinger.  
 
 <ImageCarousel className="feature" title="Samlinger på flyttefot">
   <ImageCarousel.Item 
