Fix description formatting for the FLYTT project card in samlinger-pa-flyttefot.mdx

--- a/content/samlinger-pa-flyttefot.mdx
+++ b/content/samlinger-pa-flyttefot.mdx
@@ -62,7 +62,7 @@ og prosjekt sikre samlinger.
   />
    <Card 
     title="Prosjketet FLYTT" 
-    description="Les mer om prosjektet FLYTT som er en del av prosjektet Sikre Samlinger" " 
+    description="Les mer om prosjektet FLYTT som er en del av prosjektet &quot;Sikre Samlinger&quot;" 
     image="/images/en-institusjon-blir-til/X11069_olbolle.jpg" 
     imageAlt="Foto av en ølboll i tre med brun grunnfargen og grønt mønster" 
     href="https://www.uib.no/samlingsforvaltning/149521/flytt-24" 
